--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "forms-1_2_0.zip:"	e2131501d68be41c5edc652fb7a51bc6e80dee00
+  jgoodies-forms-1_8_0.zip: 025dd4527b949cd62d815f6f04eb0554dc710197
