--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
-  jgoodies-forms-1_8_0.zip: 025dd4527b949cd62d815f6f04eb0554dc710197
+  jgoodies-forms-1_9_0-20150202.zip: 29cb80277a943ae132540686f707353efec29664
+
